# financia_py

./: setup.py
financa_py/: README.md  pyproject.toml
financa_py/financa_py/: main.py  transacao.py  utilitario.py
