[tool.poetry]   # setup.py
name = "financa-py"
version = "0.1.0"
description = ""
authors = ["douglasfariasil <douglasfariasil@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]  # requirements.txt
python = "^3.12"


[build-system]  # setuptools
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
